# rust-rtic-gdb-bug

./: Cargo.toml  README.md
src/: main.rs
